fixed overlay animation bug on mobile

--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -5,7 +5,7 @@
   position: absolute;
   background: rgba(0, 0, 0, 0.75);
   transform: translateY(-100%);
-  transition: transform .8s;
+  transition: transform .4s;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@
 
 .active {
   transform: translateY(0);
-  transition: transform .8s;
+  transition: transform .4s;
   position: fixed;
 }
 
